plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'

    id "org.sonarqube" version "7.3.1.8318"
    id 'jacoco'
}

group = 'com.erichiroshi'
version = '0.0.1-SNAPSHOT'
description = 'desafio-btgpactual-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

ext {
    testcontainersVersion = '2.0.4'
    archunitVersion       = '1.4.2'
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Persistência
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Mensageria
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-amqp-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation platform("org.testcontainers:testcontainers-bom:${testcontainersVersion}")
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation "com.tngtech.archunit:archunit-junit5:${archunitVersion}"
}

ext {
    coverageExclusions = [
    ]
}

// ── Jacoco ─────────────────────────────────────────────────────────────
jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: coverageExclusions)
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'INSTRUCTION'
                value = 'COVEREDRATIO'
                minimum = 0.70
            }
        }
    }
}

// ── Sonar ─────────────────────────────────────────────────────────────
sonar {
    properties {
        property "sonar.projectKey", "desafio-btgpactual-backend"
        property "sonar.organization", "erichiroshi"
        property 'sonar.exclusions', coverageExclusions.join(',')
    }
}

// ── Tasks ─────────────────────────────────────────────────────────────
tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    mustRunAfter tasks.named('test')
    finalizedBy tasks.named('jacocoTestCoverageVerification')
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn tasks.named('jacocoTestReport')
    mustRunAfter tasks.named('jacocoTestReport')
}

tasks.named('sonar') {
    dependsOn tasks.named('jacocoTestReport')
}